--- a/templates/index.html
+++ b/templates/index.html
@@ -4,57 +4,57 @@
 {% block body %}
     <!-- Start of body content specific to page -->
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-white"><strong>Python Home Page</strong></h1>
+        <h1 class="text-white"><strong>Fitness Tracker Backend</strong></h1>
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/python.jpeg') }}" alt="Python Development" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/diagram.drawio.png') }}" alt="JWT Drawio Model" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">What should <mark>Student Developers learn</mark>?</h5>
+                    <h5 class="card-title"> JWT Token Authetication </h5>
                     <p class="card-text">
                         <ol>
-                            <li>Python 3.9 is used for most of our backend PBL. HTML, CSS, JavaScript will be used in frontend</li>
-                            <li>Visuals Studio Code (VS Code) is the primary editor, Interactive Development Environment (IDE).</li>
-                            <li>GitHub.  Managing and sharing code change, branches, pull requests, issues, and more will be through GitHub.</li>
-                            <li>DevOps. Python programmers should have a passion for managing the environment and learning automation (Git, Linux, Bash, Python Packages, Docker).</li>
+                            <li> Purpose: Our fitness tracker contains private information of our users. To prevent non-admin, other users, and anyone else without credentials from acessing their data, we used JWT Authentication. </li>
+                            <li> To learn about how the specific anatomy of our system look at its diagram above.</li>
+                            <li> Individual user vs Admin roles - Individual users login to access their own personal data and CRUD functions for their own accounts. Admin users login to access the data and CRUD functions for all users. this allows admins to monitor the site without compromising user information to normal users thanks to the JWT Token.</li>
+                            <li> JWT Storage: Our JWTs are stored in the form of cookies instead of local storage. That way third-party scripts (ex: Github social sharing buttons) cannot access the token and protects against XSS (Cross-site scripting) attacks.</li>
                             <li>API and Microservice using Flask.  Mastering development techniques in creating and consuming RESTful APIs</li>
                         </ol>
                     </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/flask.png') }}" alt="Flask Development" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/ncs_logo.png') }}" alt="nighthawk coders logo" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">What is <mark>Flask</mark>? How do I start Web development?</h5>
+                    <h5 class="card-title">Template Repositories </h5>
                     <p class="card-text">
                         <ol>
-                            <li>Flask Framework is the popular Web Application development framework of Python.</li>
-                            <li>Blueprint is utility to help abstract complexity, moving information in independent files and directories.</li>
-                            <li>HTML using Bootstrap is a great way to build interesting pages and reduce CSS</li>
-                            <li>Jinja2 is a server-side Python like template engine, supports HTML5 web development, and provides full integration with Flask.</li>
+                            <li> Our teacher (nighthawkcoders) provided us with template repositories to start off our CPT project. The repositories gave us boiler code nessesary for web development. </li>
+                            <li>Frontend Template Repo: Nighthawk Pages. Some of the tools included: makefile, nbconvert script, jekyll theme. </li>
+                            <li> Backend Template repo: a combination of CPT repo and flask_portfolio. Some of the tools: nix files, docker integration, flask, JWT boiler code.</li>
                         </ol>
                     </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="https://github.com/nighthawkcoders/cpt" class="btn btn-primary"> CPT Template Repo </a>
+                    <p></p>
+                    <a href="https://github.com/nighthawkcoders/flask_portfolio" class="btn btn-primary"> Flask_Portfolio Template Repo </a>
+                    <p></p>
+                    <a href="https://github.com/nighthawkcoders/Nighthawk-Pages" class="btn btn-primary"> Nighthawk Pages Template Repo </a>                    
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/pythondb.png') }}" alt="Backend and Persistence" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/pythondb.png') }}" alt="Python Database" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">How do you manage <mark>Persistent data</mark> with Python?</h5>
+                    <h5 class="card-title">Testing Tools</h5>
                     <p class="card-text">
                         <ol>
-                            <li>A Database is an example of persistent data that is held on a computer.  Programming languages and frameworks allow you to store and retrive data.</li>
-                            <li>SQL stands for Structured Query Language · SQL lets you access and manipulate databases and has become a long lasting development standard.</li>
-                            <li>SQLAlchemy is the Python SQL toolkit and Object Relational Mapper (ORM) that gives application developers the full power and flexibility of SQL.</li>
-                            <li>There are many newer and sometimes easier Database languages and frameworks.  Mongo, DynamoDB, Neo4J are Databases being used by students developers in last 3 years.</li>
+                            <li>Postman: tesing JWT (cookie/token generation, authentication, etc.), testing APIs </li>
+                            <li>SQLite3: Database inspection (check if user is being created, updated, etc.) </li>
+                            <li>Python Debugger: errors in code (run as a local host link, import errors, missing code etc.)</li>
                         </ol>
                     </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
 
 
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-primary"><strong>Stubby Body</strong></h1>
-        <p class="text-secondary">Put your name here</p>
+        <h1 class="text-primary"><strong>Fitness Tracking CPT Project</strong></h1>
+        <p class="text-secondary">Project Members: Isabel, Anusha, Justin, Vibha </p>
     </div>
 {% endblock %}
